# mstring

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: mstring.c
src/include/: mstring.h
test/: CMakeLists.txt  test.c
